# Nphies-pro

./: .env.example  .env.production  .gitignore  AGENTS.md  CLOUDFLARE-SETUP.md  DASHBOARD_ENHANCEMENT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  Dockerfile  README.md  claims-management.html  cloudflare-tunnel-setup.sh  dashboard-enhanced.html  dashboard.html  deploy-domain.sh  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  enhanced-dashboard-styles.css  enhanced-dashboard.js  enhanced-data-entry-js.js  enhanced-data-entry-styles.css  enhanced-data-entry.html  health.html  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  production-setup.md  simple-index.html  tunnel-config.yml  turbo.json  update-urls.sh
docs/: AI_INTEGRATION.md  INTEGRATION_SUMMARY.md
scripts/: deploy.sh  (+6 more)
services/claims-ai-engine/: Dockerfile  pyproject.toml  requirements.txt
services/claims-ai-engine/src/: __init__.py  ag_ui_agent.py  main.py
services/claims-ai-engine/src/brainsait/: __init__.py
services/claims-ai-engine/src/brainsait/audit_logger/: __init__.py  client.py
services/claims-ai-engine/src/brainsait/fhir_validation/: __init__.py  validator.py
services/claims-ai-engine/src/brainsait/hipaa_compliance/: __init__.py  crypto.py  decorators.py
services/claims-ai-engine/src/brainsait/nphies_integration/: __init__.py  validators.py
services/claims-ai-engine/src/brainsait/rbac/: __init__.py  auth.py  roles.py
services/claims-ai-engine/src/services/: claims_processor.py
services/claims-ai-engine/src/utils/: fhir_converter.py
(+96 files in other folders)
